--- a/project/style.css
+++ b/project/style.css
@@ -8,33 +8,27 @@ body {
   font-family: 'PT Sans', sans-serif;
 }
 
+/* Как для верстки */
+h1, h2, h3, h2 + p {
+
+}
+/* Конец */
+
+
 h1 {
   margin-top: 66px;
   font-size: 40px;
   line-height: 46px;
+  font-weight: 700;
   font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
-}
-
-h2 {
-  margin-top: 40px;
-  font-size: 32px;
-  line-height: 40px;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
-}
-
-p {
-  margin-top: 30px;
-  font-size: 22px;
-  line-height: 33px;
   color: rgba(0, 0, 0, 1);
 }
 
 h1 + p {
-  margin: 0;
+  margin-top: 0;
   font-size: 22px;
   line-height: 32px;
+  letter-spacing: 0px;
   font-family: 'PT Sans Caption', sans-serif;
   color: rgba(0, 0, 0, 0.4);
 }
@@ -43,9 +37,73 @@ h1 + p > a {
   color: rgba(0, 0, 0, 0.4);
 }
 
+h2 {
+  margin-top: 43px;
+  font-size: 32px;
+  line-height: 36px;
+  font-weight: 700;
+  letter-spacing: -0.1px;
+  font-family: 'PT Sans Caption', sans-serif;
+  color: rgba(0, 0, 0, 1);
+}
+
 h2 + p {
-  margin-top: 10px;
+  margin-top: 7px;
+  letter-spacing: -0.1px;
+}
+
+h3 {
+  margin-top: 32px;
+  font-size: 28px;
+  line-height: 35px;
+  font-weight: 700;
+  font-family: 'PT Sans Caption', sans-serif;
+  color: rgba(0, 0, 0, 1);
+}
+
+p {
+  margin-top: 6px;
   font-size: 22px;
   line-height: 34px;
+  letter-spacing: 0px;
   color: rgba(0, 0, 0, 1);
+}
+p + p {
+  margin-top: 29px;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: 0px;
+}
+
+p + p,
+p + blockquote,
+blockquote + p,
+blockquote + blockquote {
+  /* margin-top: 20px; */
+}
+
+blockquote {
+  padding-left: 20px;
+  margin-top: 30px;
+  margin-left: -20px;
+  font-size: 22px;
+  line-height: 34px;
+  letter-spacing: -0.1px;
+  font-style: italic;
+  border-left: 3px solid black;
+}
+
+ul {
+  list-style: circle;
+  margin-top: 27px;
+  margin-bottom: 10px;
+  padding-left: 30px;
+  font-size: 22px;
+  line-height: 32px;
+  letter-spacing: 0px;
+}
+li + li {
+  margin-top: 26px;
+  line-height: 33px;
+  letter-spacing: 0px;
 }
