--- a/style.css
+++ b/style.css
@@ -1,19 +1,27 @@
 body {
-  width: 700px;
-  margin: 0 auto;
-  background-image: url(dc-online-media-mockup.jpg);
-  background-size: 800px 20624px;
-  background-position: top center;
-  background-repeat: no-repeat;
   font-family: 'PT Sans', sans-serif;
 }
 
 /* Как для верстки */
-h1, h2, h3, h2 + p {
-
+h1, h2, h3, p, ul, blockquote {
+  width: 700px;
+  margin: 0 auto;
 }
 /* Конец */
 
+img {
+  display: block;
+  width: 1020px;
+  margin: 80px auto;
+}
+
+img + h2 {
+  margin-top: -1px;
+}
+
+img + p {
+  margin-top: -3px;
+}
 
 h1 {
   margin-top: 66px;
@@ -75,13 +83,6 @@ p + p {
   letter-spacing: 0px;
 }
 
-p + p,
-p + blockquote,
-blockquote + p,
-blockquote + blockquote {
-  /* margin-top: 20px; */
-}
-
 blockquote {
   padding-left: 20px;
   margin-top: 30px;
@@ -95,15 +96,22 @@ blockquote {
 
 ul {
   list-style: circle;
-  margin-top: 27px;
-  margin-bottom: 10px;
-  padding-left: 30px;
+  margin: 52px 0px 52px v30px;
+  /*padding-left: 30px;*/
   font-size: 22px;
   line-height: 32px;
   letter-spacing: 0px;
+}
+li {
+  margin-bottom: 40px 0px;
 }
 li + li {
   margin-top: 26px;
   line-height: 33px;
   letter-spacing: 0px;
+}
+
+a,
+a:visited {
+  color: inherit;
 }
