--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,26 +1,12 @@
 body {
   font-family: 'PT Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-/* Как для верстки */
 h1, h2, h3, p, ul, blockquote {
   width: 700px;
   margin: 0 auto;
-}
-/* Конец */
-
-img {
-  display: block;
-  width: 1020px;
-  margin: 80px auto;
-}
-
-img + h2 {
-  margin-top: -1px;
-}
-
-img + p {
-  margin-top: -3px;
 }
 
 h1 {
@@ -84,9 +70,8 @@ p + p {
 }
 
 blockquote {
+  margin: 25px auto;
   padding-left: 20px;
-  margin-top: 30px;
-  margin-left: -20px;
   font-size: 22px;
   line-height: 34px;
   letter-spacing: -0.1px;
@@ -96,13 +81,13 @@ blockquote {
 
 ul {
   list-style: circle;
-  margin: 52px 0px 52px v30px;
-  /*padding-left: 30px;*/
+  margin: 25px auto;
   font-size: 22px;
   line-height: 32px;
   letter-spacing: 0px;
 }
 li {
+  margin-left: 30px;
   margin-bottom: 40px 0px;
 }
 li + li {
@@ -114,4 +99,25 @@ li + li {
 a,
 a:visited {
   color: inherit;
+}
+
+img {
+  display: block;
+  width: 1020px;
+  margin: 80px auto;
+}
+
+img + h2 {
+  margin-top: -1px;
+}
+img + p,
+img + blockquote,
+img + ul {
+  margin-top: -3px;
+}
+h2 + img {
+  margin-top: 82px;
+}
+h3 + img {
+  margin-top: 81px;
 }
