--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,110 +1,117 @@
-body {
-   font-family: 'PT Sans', sans-serif;
-   -webkit-font-smoothing: antialiased;
-   -moz-osx-font-smoothing: grayscale;
- }
+article a {
+ text-decoration: underline;
+}
 
- h1,
- h2,
- h3,
- p,
- ul,
- blockquote {
-   width: 700px;
-   margin: 0 auto;
- }
+article h1,
+article h2,
+article h3,
+article p,
+article ul,
+article blockquote {
+ width: 700px;
+ margin: 0 auto;
+}
 
- h1,
- h2,
- h3 {
-   font-family: 'PT Sans Caption', sans-serif;
-   font-weight: bold;
- }
+article h1,
+article h2,
+article h3 {
+ font-family: 'PT Sans Caption', sans-serif;
+ font-weight: bold;
+}
 
- h1 {
-   margin-top: 66px;
-   font-size: 40px;
-   line-height: 46px;
- }
+article h1 {
+ margin-top: 66px;
+ font-size: 40px;
+ line-height: 46px;
+}
 
- h1 + p {
-   margin-top: 14px;
-   font-family: 'PT Sans Caption', sans-serif;
-   font-size: 22px;
-   line-height: 32px;
-   color: rgba(0, 0, 0, .4);
- }
+article h1 + p {
+ margin-top: 14px;
+ font-family: 'PT Sans Caption', sans-serif;
+ font-size: 22px;
+ line-height: 32px;
+ color: rgba(0, 0, 0, .4);
+}
 
- h2 {
-   margin-top: 43px;
-   font-size: 32px;
-   line-height: 36px;
- }
+article h2 {
+ margin-top: 43px;
+ font-size: 32px;
+ line-height: 36px;
+}
 
- h2 + p {
-   margin-top: 7px;
- }
+article h2 + p {
+ margin-top: 7px;
+}
 
- h3 {
-   margin-top: 36px;
-   font-size: 28px;
-   line-height: 34px;
- }
+article h3 {
+ margin-top: 36px;
+ font-size: 28px;
+ line-height: 34px;
+}
 
- h3 + p {
-   margin-top: 6px;
- }
+article h3 + p {
+ margin-top: 6px;
+}
 
- p,
- blockquote,
- li {
-   font-size: 22px;
-   line-height: 34px;
- }
+article p,
+article blockquote,
+article li {
+ font-size: 22px;
+ line-height: 34px;
+}
 
- blockquote {
-   font-style: italic;
- }
+article blockquote {
+ position: relative;
+ font-style: italic;
+}
 
- p + p,
- p + blockquote,
- blockquote + p,
- blockquote + blockquote {
-   margin-top: 29px;
- }
+article blockquote::before {
+ content: '';
+ display: block;
+ position: absolute;
+ top: 0;
+ left: -20px;
+ width: 3px;
+ height: 100%;
+ background-color: rgba(0,0,0,.8);
+}
 
- ul {
-   margin: 29px auto;
- }
+article p + p,
+article p + blockquote,
+article blockquote + p,
+article blockquote + blockquote {
+ margin-top: 29px;
+}
 
- li{
-   margin: 17px 0 17px 30px;
- }
+article ul {
+ margin: 29px auto;
+ list-style-type: disc;
+}
 
- a {
-   color: inherit;
- }
+article li{
+ margin: 17px 0 17px 30px;
+}
 
- img {
-   display: block;
-   width: 1020px;
-   margin: 80px auto;
- }
+article img {
+ display: block;
+ width: 1020px;
+ margin: 80px auto;
+}
 
- img + h2 {
-   margin-top: -1px;
- }
+article img + h2 {
+ margin-top: -1px;
+}
 
- h2 + img {
- margin-top: 82px;
- }
+article h2 + img {
+margin-top: 82px;
+}
 
- img + p,
- img + blockquote,
- img + ul {
-   margin-top: -3px;
- }
+article img + p,
+article img + blockquote,
+article img + ul {
+ margin-top: -3px;
+}
 
- h3 + img {
-   margin-top: 81px;
- }
+article h3 + img {
+ margin-top: 81px;
+}
