--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -4,98 +4,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-h1, h2, h3, p, ul, blockquote {
-  width: 700px;
-  margin: 0 auto;
-}
-
-h1, h2, h3 {
-  font-family: 'PT Sans Caption', sans-serif;
-  font-weight: bold;
-}
-
-h1 {
-  margin-top: 66px;
-  font-size: 40px;
-  line-height: 46px;
-}
-
-h1 + p {
-  margin-top: 21px;
-  font-family: 'PT Sans Caption', sans-serif;
-  font-size: 22px;
-  line-height: 32px;
-  color: rgba(0, 0, 0, .5);
-}
-
-h2 {
-  margin-top: 43px;
-  font-size: 32px;
-  line-height: 36px;
-}
-
-h2 + p {
-  margin-top: 7px;
-}
-
-h3 {
-  font-size: 28px;
-  margin-top: 36px;
-  line-height: 34px;
-}
-
-h3 + p {
-  margin-top: 6px;
-}
-
-p, blockquote, li {
-  font-size: 22px;
-  line-height: 34px;
-}
-
-blockquote {
-  font-style: italic;
-}
-
-li {
-  margin: 17px 0 17px 30px;
-}
-
-ul {
-  margin: 29px auto;
-}
-
-p + p,
-p + blockquote,
-blockquote + p,
-blockquote + blockquote {
-  margin-top: 39px;
-}
-
 a {
+  text-decoration: none;
   color: inherit;
-}
-
-img {
-  display: block;
-  width: 1020px;
-  margin: 80px auto;
-}
-
-img + h2 {
-  margin-top: -1px;
-}
-
-h2 + img {
-  margin-top: 82px;
-}
-
-img + p,
-img + blockquote,
-img + ul {
-  margin-top: -3px;
-}
-
-h3 + img {
-  margin-top: 81px;
 }
