--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,5 @@
 @import "reset.css";
 @import "<link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic" rel="stylesheet">";
 @import "layout.css";
+@import "sidebar.css";
+@import "content.css";
