--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -3,121 +3,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-h1, h2, h3, p, ul, blockquote {
-  width: 700px;
-  margin: 0 auto;
-}
-
-h1 {
-  margin-top: 66px;
-  font-size: 40px;
-  line-height: 46px;
-  font-weight: 700;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
-}
-
-h1 + p {
-  margin-top: 0;
-  font-size: 22px;
-  line-height: 32px;
-  letter-spacing: 0px;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 0.4);
-}
-
-h1 + p > a {
-  color: rgba(0, 0, 0, 0.4);
-}
-
-h2 {
-  margin-top: 43px;
-  font-size: 32px;
-  line-height: 36px;
-  font-weight: 700;
-  letter-spacing: -0.1px;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
-}
-
-h2 + p {
-  margin-top: 7px;
-  letter-spacing: -0.1px;
-}
-
-h3 {
-  margin-top: 32px;
-  font-size: 28px;
-  line-height: 35px;
-  font-weight: 700;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
-}
-
-p {
-  margin-top: 6px;
-  font-size: 22px;
-  line-height: 34px;
-  letter-spacing: 0px;
-  color: rgba(0, 0, 0, 1);
-}
-p + p {
-  margin-top: 29px;
-  font-size: 22px;
-  line-height: 34px;
-  letter-spacing: 0px;
-}
-
-blockquote {
-  margin: 25px auto;
-  padding-left: 20px;
-  font-size: 22px;
-  line-height: 34px;
-  letter-spacing: -0.1px;
-  font-style: italic;
-  border-left: 3px solid black;
-}
-
-ul {
-  list-style: circle;
-  margin: 25px auto;
-  font-size: 22px;
-  line-height: 32px;
-  letter-spacing: 0px;
-}
-li {
-  margin-left: 30px;
-  margin-bottom: 40px 0px;
-}
-li + li {
-  margin-top: 26px;
-  line-height: 33px;
-  letter-spacing: 0px;
-}
-
 a,
 a:visited {
   color: inherit;
-}
-
-img {
-  display: block;
-  width: 1020px;
-  margin: 80px auto;
-}
-
-img + h2 {
-  margin-top: -1px;
-}
-img + p,
-img + blockquote,
-img + ul {
-  margin-top: -3px;
-}
-h2 + img {
-  margin-top: 82px;
-}
-h3 + img {
-  margin-top: 81px;
+  text-decoration: none;
 }
