--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,5 @@
 @import 'reset.css';
 @import 'layout.css';
-@import 'https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic'
+@import 'https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic';
+@import 'sidebar.css';
+@import 'content.css';
