--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,2 +1,6 @@
-@import "layout.css";
-@import "reset.css";
+@import  ' reset.css ' ;
+@import  ' https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic ' ;
+
+@import  ' layout.css ' ;
+@import  ' content.css ' ;
+@import  ' sitebar.css ' ;
