--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,9 +1,20 @@
 nav {
 background: green;
   position: fixed;
-  top: 20px;
+  top: 28px;
   left: 20px;
-  width: 300px;
   box-sizing: border-box;
+  width: 300px;
   padding: 30px;
+}
+
+nav li {
+  margin: 12px 0;
+  font-size: 14 px;
+  line-height: 15px;
+  color: rgba(0,0,0,.8);
+}
+
+nav > ul > li:first-child {
+  font-weight: bold;
 }
