--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,20 +1,51 @@
 nav {
 background: green;
   position: fixed;
-  top: 28px;
+  top: 20px;
   left: 20px;
   box-sizing: border-box;
   width: 300px;
-  padding: 30px;
+  opacity: .1;
+  transition: all .1s ease-out;
+}
+
+nav:hover {
+  opacity: 1;
+}
+
+nav > ul {
+  position: absolute;
+  padding: 15px 30px;
 }
 
 nav li {
   margin: 12px 0;
-  font-size: 14 px;
+  font-size: 14px;
   line-height: 15px;
   color: rgba(0,0,0,.8);
 }
 
+nav > ul > li {
+  color: rgba(0,0,0,1);
+}
+
+nav li:hover {
+  opacity: 1;
+}
+
 nav > ul > li:first-child {
+  margin-top: 10px;
   font-weight: bold;
+}
+
+nav > ul > li > ul {
+  padding-left: 10px;
+}
+
+nav > ul > li > ul li {
+  color: rgba(0,0,0,.4);
+}
+
+nav > ul > li > ul li:hover {
+  color: rgba(0,0,0,.6);
 }
