--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,9 +1,46 @@
-nav{
-  background: green;
+nav {
   position: fixed;
   top: 20px;
   left: 20px;
-  box-sizing: border-box;  
+  box-sizing: border-box;
   width: 300px;
-  padding: 30px;
+  opacity: 0.1;
+  transition: all 0.2s ease-out;
+}
+
+nav li {
+  margin: 12px 0;
+  font-size: 14px;
+  line-height: 15px;
+  color: rgba(0, 0, 0, 0.8);
+  opacity: .8;
+}
+nav > ul > li:hover {
+  color: rgba(0, 0, 0, 1);
+}
+
+nav:hover {
+  opacity: 1;
+}
+
+ nav > ul {
+  position: absolute;
+  padding: 15px 30px;
+ }
+
+nav > ul > li > ul {
+  padding-left: 10px;
+}
+
+nav > ul > li:first-child {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+nav > ul > li > ul li {
+  color: rgba(0, 0, 0, 0.4);
+}
+
+nav > ul > li > ul li:hover{
+  color: rgba(0, 0, 0, 0.6);
 }
