--- a/stylesheets/sitebar.css
+++ b/stylesheets/sitebar.css
@@ -5,5 +5,40 @@ nav{
   left: 20px;
   box-sizing: border-box;
   width: 300px;
-  padding: padding: 13px 30px 15px;
+  opacity: .1;
+  transition: all .3s ease-out;
+}
+
+nav > ul {
+  position: absolute;
+  padding: 13px 30px 15px;
+}
+
+nav:hover {
+  opacity: 1;
+}
+
+nav li {
+  margin: 12px 0;
+  font-size: 14px;
+  line-height: 15px;
+  color: rgba(0,0,0,.8);
+  opacity: .8;
+}
+
+nav > ul > li:hover {
+  color: rgba(0,0,0,1)
+}
+
+nav > ul > li:first-child {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+nav > ul > li > ul {
+  padding-left: 10px;
+}
+
+nav > ul > li > ul li:hover {
+  color: rgba(0,0,0,.6);
 }
