--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -91,7 +91,7 @@ article blockquote::before {
   top: 0;
   left: -20px;
   width: 3px;
-  height: 100;
+  height: 100%;
   background-color: rgba(0,0,0,.8);
 }
 
