--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -5,6 +5,47 @@ nav {
   left: 20px;
   box-sizing: border-box;
   width: 300px;
-  padding: 30px;
+  opacity: .1;
+  transition: all .3s ease-out;
+}
+
+nav:hover {
+  opacity: 1;
+}
+
+
+nav li {
+  margin: 12px 0;
+  font-size: 14px;
+  line-height: 15px;
+  color: rgba(0,0,0,.8);
+  opacity:.8;
+}
+
+
+nav > ul {
+  position: absolute;
+  padding: 15px 30px;
+}
+
+nav > ul > li:hover {
+  color: rgba(0,0,0,1)
+}
+
+nav > ul > li:first-child {
+  margin-top: 10px;
+  font-weight: bold;
+}
+
+nav > ul > li > ul {
+  padding-left: 10px;
+}
+
+nav > ul > li > ul li {
+  color: rgba(0,0,0,.4)
+
+}
+nav > ul > li > ul li:hover {
+  color: rgba(0,0,0,.6)
 
 }
