--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,3 +1,4 @@
+
 article a {
   text-decoration: underline;
 }
@@ -9,8 +10,24 @@ article p,
 article ul,
 article blockquote {
   width: 700px;
-  margin: 0 auto;
+  margin: 0 auto;;
 }
+
+
+/*  Хак для верстки  */
+
+article h1,
+article h2,
+article h3,
+article h1 + p {
+  letter-spacing: -0.02px;
+}
+
+article p {
+  /*letter-spacing: -0.06px;*/
+}
+
+/*  Конец хака  */
 
 article h1,
 article h2,
@@ -20,9 +37,9 @@ article h3 {
 }
 
 article h1 {
-  margin-top: 66px;
   font-size: 40px;
   line-height: 46px;
+  margin-top: 66px;
 }
 
 article h1 + p {
@@ -32,6 +49,8 @@ article h1 + p {
   line-height: 32px;
   color: rgba(0, 0, 0, .4);
 }
+
+
 
 article h2 {
   margin-top: 43px;
@@ -43,14 +62,29 @@ article h2 + p {
   margin-top: 7px;
 }
 
-article h3{
+article h3 {
   margin-top: 36px;
   font-size: 28px;
   line-height: 34px;
 }
 
-article h3 + p{
+article h3 + p {
+  line-height: 34px;
   margin-top: 6px;
+}
+
+article p {
+  font-size: 22px;
+  /*line-height: 34px;*/
+  line-height: 34px;
+}
+
+article p + p,
+article p + blockquote,
+article blockquote + p,
+article blockquote + blockquote {
+  /*margin-top: 30px;*/
+  margin-top: 29px;
 }
 
 article p,
@@ -60,27 +94,20 @@ article li {
   line-height: 34px;
 }
 
-article blockquote{
-  position: relative;
+article blockquote {
   font-style: italic;
+  position: relative;
 }
 
 article blockquote::before {
   content: '';
+  width: 3px;
   display: block;
   position: absolute;
+  height: 100%;
+  background-color: rgba(0, 0, 0, .8);
   top: 0;
   left: -20px;
-  width: 3px;
-  height: 100%;
-  background: rgba(0,0,0,.8);
-}
-
-article p + p,
-article p + blockquote,
-article blockquote + p,
-article blockquote + blockquote {
-  margin-top: 29px;
 }
 
 article ul {
@@ -93,6 +120,7 @@ article li {
 }
 
 
+
 article img {
   display: block;
   width: 1020px;
@@ -103,14 +131,14 @@ article img + h2 {
   margin-top: -1px;
 }
 
+article h2 + img {
+  margin-top: 82px;
+}
+
 article img + p,
 article img + blockquote,
 article img + ul {
   margin-top: -3px;
-}
-
-article h2 + img {
-  margin-top: 82px;
 }
 
 article h3 + img {
