--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -38,7 +38,7 @@ article p {
 
 article h1,
 article h2,
-article h3
+article h3 {
   font-family: 'PT Sans Caption', sans-serif;
   font-weight: bold;
 }
