--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,3 +3,4 @@
 @import 'https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic';
 @import 'sidebar.css';
 @import 'content.css';
+@import 'menubar.css';
