--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,4 +1,4 @@
-nav {
+.sidebar {
   width: 300px;
   position: fixed;
   top: 20px;
@@ -7,47 +7,47 @@ nav {
   transition: all .1s ease-out;
 }
 
-nav > ul {
+.sidebar > ul {
   position: absolute;
   padding: 15px 30px;
 }
-nav li {
+.sidebar li {
   margin: 12px 0;
   font-size: 14px;
   line-height: 15px;
   color: rgb(0, 0, 0, .8);
   opacity: .5;
 }
-nav li:hover {
+.sidebar li:hover {
   opacity: 1;
 }
 
 
-nav > ul > li:hover {
+.sidebar > ul > li:hover {
   color: rgba(0, 0, 0, 1);
 }
-nav > ul > li:first-child {
+.sidebar > ul > li:first-child {
   margin-top: 10px;
   font-weight: bold;
 }
 
 
-nav > ul > li > ul {
+.sidebar > ul > li > ul {
   padding-left: 10px;
 }
-nav > ul > li > ul > li {
+.sidebar > ul > li > ul > li {
   color: rgba(0, 0, 0, 0.5);
 }
 
-nav > ul > li > ul li {
+.sidebar > ul > li > ul li {
   color: rgb(0, 0, 0, .4);
 }
 
-nav > ul > li > ul li:hover {
+.sidebar > ul > li > ul li:hover {
   color: rgb(0, 0, 0, .6);
 }
 
 
-nav a:hover {
+.sidebar a:hover {
   border-bottom: 1px solid;
 }
