--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,10 +1,14 @@
-    body {
-    font-family: 'PT Sans', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+*  {
+  box-sizing: border-box;
+}
 
-  a {
-    text-decoration: none;
-    color: inherit;
-  }
+body {
+  font-family: 'PT Sans', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
