--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,20 +1,18 @@
-nav {
-  background: pink;
+.sidebar {
   position: fixed;
   top: 20px;
   left: 20px;
-  box-sizing: border-box;
   width: 300px;
   opacity: .1;
   transition: all .3s ease-out;
 }
 
-nav:hover {
+.sidebar:hover {
   opacity: 1;
 }
 
 
-nav li {
+.sidebar li {
   margin: 12px 0;
   font-size: 14px;
   line-height: 15px;
@@ -23,29 +21,29 @@ nav li {
 }
 
 
-nav > ul {
+.sidebar > ul {
   position: absolute;
   padding: 15px 30px;
 }
 
-nav > ul > li:hover {
+.sidebar > ul > li:hover {
   color: rgba(0,0,0,1)
 }
 
-nav > ul > li:first-child {
+.sidebar > ul > li:first-child {
   margin-top: 10px;
   font-weight: bold;
 }
 
-nav > ul > li > ul {
+.sidebar > ul > li > ul {
   padding-left: 10px;
 }
 
-nav > ul > li > ul li {
+.sidebar > ul > li > ul li {
   color: rgba(0,0,0,.4)
 
 }
-nav > ul > li > ul li:hover {
+.sidebar > ul > li > ul li:hover {
   color: rgba(0,0,0,.6)
 
 }
