--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,5 +1,8 @@
-body {
+* {
+  box-sizing: border-box;
+}
 
+body {
   font-family: 'PT Sans', sans-serif;;
   /*background-image: url(dc-online-media-mockup.jpg);
   background-size: 800px 20624px;
