--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,3 +1,7 @@
-@import "reset.css" ;
-@import "https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans+Narrow:400,700&subset=cyrillic";
-@import "layout.css" ;
+@import "reset.css";
+@import "https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic";
+
+@import "layout.css";
+@import "menubar.css";
+@import "sidebar.css";
+@import "content.css";
