--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -2,13 +2,8 @@ article a {
   text-decoration: underline;
 }
 
-article h1,
-article h2,
-article h3,
-article p,
-article ul,
-article blockquote {
-  width: 700px;
+article > * {
+  width: 728px;
   margin: 0 auto;
 }
 
@@ -22,7 +17,7 @@ article h3 {
 article h1{
   font-size: 40px;
   line-height: 46px;
-  margin-top: 66px;
+  margin-top: 16px;
 }
 
 article h1 + p {
