--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,13 +1,8 @@
 article a {
   text-decoration: underline;
 }
-article h1,
-article h2,
-article h3,
-article p,
-article ul,
-article blockquote {
-  width: 700px;
+article > * {
+  width: 728px;
   margin: 0 auto;
 }
 
@@ -15,14 +10,14 @@ article blockquote {
 article h1,
 article h2,
 article h3 {
-font-family: 'PT Sans Caption', sans-serif;
-font-weight: bold;
+  font-family: 'PT Sans Caption', sans-serif;
+  font-weight: bold;
 }
 
 article h1 {
+  margin-top: 16px;
   font-size: 40px;
   line-height: 46px;
-  margin-top: 66px;
 }
 
 article h1 + p{
@@ -60,10 +55,10 @@ article li{
  line-height: 34px;
 }
 
-article blockquote{
+article blockquote {
  font-style: italic;
  position: relative;
-  }
+}
 
 article blockquote::before {
   content: '';
