--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,23 +1,22 @@
 article a {
   text-decoration: underline;
 }
-
+article > * {
+  width: 728px;
+  margin: 0 auto;
+}
 article h1,
 article h2,
-article h3,
-article p,
-article ul,
-article blockquote {
-  width: 700px;
-  margin: 0 auto;
+article h3, {
+  font-family: 'PT Sans Caption', sans-serif;
+  color: rgba(0, 0, 0, 1);
 }
 
 article h1 {
-  margin-top: 66px;
+  margin-top: 16px;
   font-size: 40px;
   line-height: 46px;
   font-weight: 700;
-  font-family: 'PT Sans Caption', sans-serif;
   color: rgba(0, 0, 0, 1);
 }
 
@@ -40,8 +39,6 @@ article h2 {
   line-height: 36px;
   font-weight: 700;
   letter-spacing: -0.1px;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
 }
 
 article h2 + p {
@@ -54,8 +51,6 @@ article h3 {
   font-size: 28px;
   line-height: 35px;
   font-weight: 700;
-  font-family: 'PT Sans Caption', sans-serif;
-  color: rgba(0, 0, 0, 1);
 }
 
 article p {
