--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -3,6 +3,7 @@
 }
 
 body {
+  min-width: 768px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "PT Sans", sans-serif;
