--- a/stylesheets/layout.css
+++ b/stylesheets/layout.css
@@ -1,8 +1,9 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
+  min-width: 760px;
   font-family: 'PT Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
