--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -7,17 +7,7 @@ article a {
 }
 
 article > * {
-  width: 700px;
-  margin: 0 auto;
-}
-
-article h1,
-article h2,
-article h3,
-article p,
-article ul,
-article blockquote {
-  width: 700px;
+  width: 728px;
   margin: 0 auto;
 }
 
@@ -31,7 +21,7 @@ article h3 {
 article h1 {
   font-size: 40px;
   line-height: 46px;
-  margin-top: 66px;
+  margin-top: 16px;
 }
 
 article h1 + p {
@@ -62,11 +52,16 @@ article h3 + p {
   margin-top: 6px;
 }
 
-article p + p {
+article h3 + p,
+article p + blockquote,
+article blockquote + p,
+article blockquote + blockquote {
   margin-top: 29px;
 }
 
-article p, blockquote, li{
+article p,
+blockquote,
+li {
   font-size: 22px;
   line-height: 34px;
 }
@@ -85,13 +80,6 @@ article blockquote::before{
   width: 3px;
   height: 100%;
   background-color: rgba(0,0,0,.8);
-}
-
-article p + p,
-article p + blockquote,
-article blockquote + p,
-article blockquote + blockquote {
-  margin-top: 29px;
 }
 
 article ul{
@@ -127,6 +115,6 @@ article img + blockquote {
   margin-top: -3px;
 }
 
-article img + p {
-  margin-top: -3px;
+article img + h3 {
+  margin-top: -1px;
 }
