--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -2,14 +2,13 @@ article a {
   text-decoration: underline;
 }
 
-article > *{
+article > *:not(section) {
   width: 728px;
   margin: 0 auto;
 }
 
 article h1,
 article h2,
-
 article h3 {
   font-family: 'PT Sans Caption', sans-serif;
   font-weight: bold;
@@ -90,7 +89,7 @@ article li {
   margin: 17px 0 17px 30px;
 }
 
-article img {
+article > img {
   display: block;
   width: 1020px;
   margin: 80px auto;
