--- a/stylesheets/menubar.css
+++ b/stylesheets/menubar.css
@@ -13,13 +13,13 @@
   background-image: url(../images/wikimedium_logo.svg);
 }
 
-.proekt {
+.about {
   margin-top: 8px;
   font-size: 15px;
   color: rgba(0,0,0,.2);
   transition: all .3s ease-out;
 }
 
-.proekt:hover {
+.about:hover {
   color: rgba(0,0,0,.4);
 }
