--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -1,19 +1,75 @@
-.chevron {
-  transform: rotate(45deg);
+.gallery {
+  position: relative;
+  overflow: hidden;
 }
 
-.chevron div {
+.galleryRail {
+  display: flex;
+  transition: all .3s ease;
+}
+
+.galleryRail img {
+  display: block;
+  width: 1020px;
+  margin: 0 auto;
+}
+
+.galleryRail figure {
+  width: 100vw;
+  min-width: 100vw;
+}
+
+.gallery figcaption {
+  height: 51px;
+  font-size: 14px;
+  line-height: 50px;
+  text-align: center;
+  color: rgba(0,0,0,.4);
+}
+
+.galleryNav {
+  position: absolute;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: calc(100% - 51px);
+}
+
+.galleryNav div {
+  position: relative;
+  width: 20px;
+  height: 20px;
+  margin: 30px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.galleryNav .disabled {
+  opacity: 0;
+}
+
+.galleryNav div::before,
+.galleryNav div::after {
+  content: '';
+  position: absolute;
   background: black;
 }
 
-.chevron div:first-child {
+.galleryNav div::before {
   width: 5px;
-  height: 25px;
-  background: black;
+  height: 20px;
 }
 
-.chevron div:last-child {
-  width: 30px;
+.galleryNav div::after {
+  width: 20px;
   height: 5px;
-  background: black;
+}
+
+#prev {
+  transform: rotate(-45deg);
+}
+
+#next {
+  transform: rotate(135deg);
 }
