--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,7 +1,7 @@
 article a {
   text-decoration: underline;
 }
-article > * {
+article > *:not(section) {
   width: 728px;
   margin: 0 auto;
 }
@@ -104,7 +104,7 @@ article li + li {
   letter-spacing: 0px;
 }
 
-article img {
+article > img {
   display: block;
   width: 1020px;
   margin: 80px auto;
