--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -1,10 +1,11 @@
 .sidebar {
-  width: 300px;
   position: fixed;
+  width: 300px;
   top: 46px;
   left: 20px;
   box-sizing: border-box;
   transition: all .1s ease-out;
+  z-index: 1;
 }
 
 .sidebar > ul {
