--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -2,7 +2,7 @@ article a {
   text-decoration: underline;
 }
 
-article > * {
+article > *:not(section) {
   width: 728px;
   margin: 0 auto;
 }
@@ -87,7 +87,7 @@ article blockquote + blockquote {
   margin-top: 39px;
 }
 
-article img {
+article > img {
   display: block;
   width: 1020px;
   margin: 80px auto;
