--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -3,7 +3,7 @@ article a {
 }
 
 
-article > * {
+article > *:not(section) {
   width: 728px;
   margin: 0 auto;
 }
@@ -89,7 +89,7 @@ article li {
 }
 
 
-article img {
+article > img {
   display: block;
   width: 1020px;
   margin: 80px auto;
