--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,7 +1,7 @@
 article a {
   text-decoration: underline;
 }
-article > * {
+article > *:not(section) {
   width: 728px;
   margin: 0 auto;
 }
@@ -73,8 +73,6 @@ article blockquote::before {
 
 
 
-
-
  article p + p,
  article p + blockquote,
  article blockquote + p,
@@ -94,13 +92,13 @@ article  a {
    color: inherit;
  }
 
- article img {
+ article > img {
    display: block;
    width: 1020px;
    margin: 80px auto;
  }
 
- article img +p,
+ article img + p,
  img + blockquote,
  img + ul {
    margin-top: -3px;
