--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -11,7 +11,7 @@ article blockquote {
   width: 700px;
   margin:0 auto;
 }
-article img {
+article > img {
   display: block;
   width: 1020px;
   margin: 80px auto;
