--- a/stylesheets/content.css
+++ b/stylesheets/content.css
@@ -1,7 +1,7 @@
 article a {
   text-decoration: underline;
 }
-article > * {
+article > *:not(section) {
   width: 728px;
   margin: 0 auto;
 }
@@ -108,7 +108,7 @@ article li {
 
 
 
-article img {
+article > img {
   width: 1020px;
   margin: 80px auto;
   display: block;
