--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -1,13 +1,28 @@
 @media screen and (max-width: 1340px) {
-.sidebar {
-display: none;
+  .sidebar {
+    display: none;
+  }
 }
+
+@media screen and (max-width: 1080px) {
+  .galleryNav div::before,
+  .galleryNav div::after {
+    background: white;
+  }
 }
 
 @media screen and (max-width: 1020px) {
-article img {
-width: 100%;
+  article > img,
+  .galleryRail img {
+    width: 100%;
+  }
 }
+
+@media screen and (max-width: 768px) {
+  .galleryRail figure {
+    width: 768px;
+    min-width: 768px;
+  }
 }
 
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) {
