--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -2,8 +2,8 @@
 @import  'https://fonts.googleapis.com/css?family=PT+Sans+Caption:400,700|PT+Sans:400,400i,700,700i&subset=cyrillic ' ;
 
 @import 'layout.css';
-@import 'menubar.css' ;
+@import 'menubar.css';
+@import "gallery.css";
 @import 'content.css';
 @import 'sidebar.css';
-@import 'gallery.css';
 @import 'responsible.css';
