--- a/stylesheets/responsible.css
+++ b/stylesheets/responsible.css
@@ -28,9 +28,12 @@
   body {
     min-width: 320px;
   }
-
-  article > * {
+  article > *:not(section) {
     width: calc(100% - 40px);
+  }
+  .galleryRail figure {
+    width: 100%;
+    min-width: 100%;
   }
 }
 
