--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -15,8 +15,8 @@
 }
 
 .galleryRail figure {
-  width: 100VW;
-  min-width: 100VW;
+  width: 100vw;
+  min-width: 100vw;
 }
 
 .gallery figcaption {
