--- a/stylesheets/sidebar.css
+++ b/stylesheets/sidebar.css
@@ -5,6 +5,7 @@
   width: 300px;
   opacity: .1;
   transition: all .1s ease-out;
+  z-index: 1;
 }
 
 .sidebar:hover {
@@ -23,12 +24,8 @@
   color: rgba(0,0,0,.8);
 }
 
-.sidebar > ul > li {
+.sidebar > ul > li:hover {
   color: rgba(0,0,0,1);
-}
-
-.sidebar li:hover {
-  opacity: 1;
 }
 
 .sidebar > ul > li:first-child {
@@ -36,14 +33,14 @@
   font-weight: bold;
 }
 
-.sidebar > ul > li > ul {
+.sidebar > ul > li > ul{
   padding-left: 10px;
 }
 
 .sidebar > ul > li > ul li {
-  color: rgba(0,0,0,.4);
+    color: rgba(0,0,0,.4);
 }
 
 .sidebar > ul > li > ul li:hover {
-  color: rgba(0,0,0,.6);
+    color: rgba(0,0,0,.6);
 }
